[package]
name = "sqlmo"
version = "0.11.5"
edition = "2021"
description = "SQL data primitives. Use it to generate SQL queries, auto-generate SQL migrations, and more."
license = "MIT"
homepage = "https://github.com/kurtbuilds/sqlmo"
repository = "https://github.com/kurtbuilds/sqlmo"
documentation = "https://docs.rs/sqlmo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
openapiv3-extended = { version = "2.0.3", optional = true }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] , optional = true }
tokio = { version = "1.22.0", features = ["full"] , optional = true }
convert_case = "0.6.0"
serde_yaml = { version = "0.9.14", optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
# Enables composing a database spec based on an OpenAPI spec.
openapi = ["openapiv3-extended", "serde_yaml"]
# Enables readinga database spec from a database connection.
sqlx = ["dep:sqlx", "tokio"]

[dev-dependencies]
serde_json = "1.0.93"
