[workspace]
members = [
    "sqlmo_openapi",
    "sqlmo_sqlx",
]

[package]
name = "sqlmo"
version = "0.22.4"
edition = "2021"
description = "SQL data primitives. Use it to generate SQL queries, auto-generate SQL migrations, and more."
license = "MIT"
homepage = "https://github.com/kurtbuilds/sqlmo"
repository = "https://github.com/kurtbuilds/sqlmo"
documentation = "https://docs.rs/sqlmo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"], optional = true }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
