[package]
name = "sqlmo_openapi"
version = "0.14.0"
edition = "2021"
description = "Crate to create sqlmo models from openapi v3 spec"
license = "MIT"
repository = "https://github.com/kurtbuilds/sqlmo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = { version = "3", package = "openapiv3-extended" }
sqlmo = { path = ".." , version = "0.14"}
convert_case = "0.6.0"
anyhow = "1.0.66"

[dev-dependencies]
serde_yaml = "0.9.14"
serde_json = "1.0.93"
