[package]
name = "sqlmo_openapi"
version = "0.24.0"
edition = "2021"
description = "Crate to create sqlmo models from openapi v3 spec"
license = "MIT"
repository = "https://github.com/kurtbuilds/sqlmo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = { version = "6", package = "openapiv3-extended" }
sqlmo.workspace = true
convert_case = "0.7.1"
anyhow = "1.0.89"

[dev-dependencies]
serde_yaml = "0.9.34"
serde_json = "1.0.128"
