[package]
name = "sqlmo_sqlx"
version = "0.19.0"
edition = "2021"
description = "Crate to create sqlmo models from sqlx database (currently just postgres)"
license = "MIT"
repository = "https://github.com/kurtbuilds/sqlmo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"], optional = true }
sqlmo = { path = "..", version = "0.18" }
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres"] }
anyhow = "1.0.72"
itertools = "0.13.0"
async-trait = "0.1.71"
